# hackclub-arcade

./: .gitignore  README.md
air-quality-sensor/: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  esp32-case-cover.stl  esp32-case.stl  grafana-dashboard.json  platformio.ini  postgres_database.schema  server.py  startup.sh
air-quality-sensor/circuit_and_pcb/: SCH_release-af_2024-07-28.json  Sheet_2-copy_2024-07-28.schdoc
air-quality-sensor/lib/: README
air-quality-sensor/python-env/: pyvenv.cfg
air-quality-sensor/src/: main.cpp
chip8-emulator/: .gitignore  README.md  chip8-emulator.cpp  chip8-emulator.sln  chip8-emulator.vcxproj  chip8-emulator.vcxproj.filters  debuggingProgress.md
chip8-emulator/test-roms/: value-test.r  (+2 more)
http-server/: CMakeLists.txt  README.md  Response.cpp  Response.hpp  ResponseTypes.cpp  ResponseTypes.hpp  ServerStats.cpp  ServerStats.hpp  main.cpp  util.cpp  util.hpp
http-server/templates/: 404.html
imgui-tests/: README.md  imgui-tests.cpp  imgui-tests.sln  imgui-tests.vcxproj  imgui-tests.vcxproj.filters
pe-file-parser/: README.md  pe-file-parser.sln
pe-file-parser-test/: README.md  pe-file-parser-test.cpp  pe-file-parser-test.sln  pe-file-parser-test.vcxproj  pe-file-parser-test.vcxproj.filters  pe32parser.hpp
peparser-test/: CMakeLists.txt  main.cpp  peparser.hpp
qt-texteditor/: README.md  highlighterc.cpp  highlighterc.h  icons.qrc  main.cpp  qt-texteditor.pro  replacedialog.cpp  replacedialog.h  replacedialog.ui  searchdialog.cpp  searchdialog.h  searchdialog.ui  texteditor.cpp  texteditor.h  texteditor.ui
(+431 files in other folders)
